# risumetrics

./: .gitreview  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  README.rst  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  tox.ini  web.py
.github/ISSUE_TEMPLATE/: feature_request.md
citmetrics/: convert-txt-to-json.py  validatejsons.py  web.py
citmetrics/.github/ISSUE_TEMPLATE/: feature_request.md
