[metadata]
version = 0.2.3
name = citmetrics
summary = Utility receiving json results from citellus and perform analytics
description-file = README.rst
license = GPL3
classifiers = 
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Customer Service
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Unix Shell
	Topic :: Security
	Topic :: System
	Topic :: Utilities
author = Pablo Iranzo Gómez
author-email = Pablo.Iranzo@gmail.com
home-page = https://github.com/citellusorg/citmetrics
package_data={
	'citellus': ['*.html'],
   },
include_package_data=True,

[files]
packages = 
	citmetrics

scripts = 
	citmetrics/web.py


[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package = 
	citellusclient
	maguiclient
cover-erase = 1
verbosity = 2

[extract_messages]
input_dirs = citmetrics
output_file = citmetrics/locale/citellus.pot
